src/scss/_lesson.scss
/* ... */
LessonContent div.content-wrapper {
    min-height: calc(100vh - #{$top-menu-height-no-footer} - 30px - 40px - #{$bottom-menu-height-no-footer});
    padding-bottom: 30px;
    border-radius: 30px;
    background-color: $gray-10;
    flex-direction: column;
    padding-top: 30px;
    display: flex;
}

LessonTest, TestSingleAnswer, TestMultipleAnswer, TestFeedbackModal {
    .answer {
        flex: 1;
        display: flex;
        flex-direction: column;

        h4 {
            margin: 0 0 1.5em 0;
            font-weight: 100;
            font-size: 1em;
            color: $gray-3;
        }
        
        button {
            width: 90px;
            align-self: center;
        }

        .answers-block {
            flex: 1;
        }
    }

    .test {
        overflow: auto;
        margin-top: -#{$top-menu-height};
        padding-top: calc(#{$top-menu-height} - 10px);
        padding-bottom: 10px;

        @media only screen and (max-width: $sm-phone) {
            margin-bottom: 1rem;
        }

        h3 {
            margin-bottom: 0.3em;
        }

        button {
            flex: end;

        }

        ol {
            flex: 1;

            li {
                flex-direction: column;
                margin-bottom: 15px;
                display: flex;

                & > div {
                    align-items: center;
                    display: flex;

                    p {
                        flex-shrink: 1;
                        margin: 0;
                    }
                }

                & > div:nth-child(2) {
                    padding-left: 35px;

                    p {
                        margin-left: 5px;
                    }
                }

                .radio {
                    background-color: $white;
                    border-radius: 50%;
                    margin-right: 10px;
                    position: relative;
                    border: $border;
                    flex-shrink: 0;
                    height: 23px;
                    width: 23px;

                    & > div {
                        border-radius: 50%;
                        position: absolute;
                        margin: auto;
                        height: 11px;
                        width: 11px;
                        bottom: 0;
                        right: 0;
                        left: 0;
                        top: 0;
                    }
                }

                .checkmark, .cross, .pendingAnswer {
                    height: 15px;
                    width: 18px;
                    margin-right: 5px;
                    display: inline-block;
                    position: absolute;
                    margin-left: 4px;
                }

                .cross {
                    background-color: $red-2;
                    border-radius: 15px;
                    width: 15px;
                }

                .pendingAnswer {
                    background-color: $blue-1;
                    border-radius: 10px;
                }

                .checkbox {
                    content: ''; 
                    box-sizing: border-box;
                    height: 25px;
                    width: 25px;
                    border: 1px solid $gray-5;
                    border-radius: 3px;
                    margin-right: 15px;
                    flex: none;
                }
            }

            li:hover {
                cursor: pointer;
            }

            li.selected {
                .radio {
                    & > div {
                        background-color: $green-1;
                    }
                }
            }

            li.selected.wrong {
                .radio {
                    border: 2px solid $red-2;
                    height: 21px;
                    width: 21px;

                    & > div {
                        background-color: $red-2;
                    }
                }
            }

            li:last-child {
                margin-bottom: 0;
            }
        }

        .btn-primary {
            min-width: 90px;
            font-size: 12px;
        }

        .card-number {
            font-size: 12px;
            margin-bottom: -15px;
            flex: 0;
            text-align: center;
        }
    }

    .feedback-modal {
        position: absolute;
        bottom: 0px;
        background-color: white;
        width: 100%;
        text-align: center;
        height: 300px;
        border-radius: 30px 30px 0px 0px;
        box-shadow: 0px 0px 10px 5px $gray-3;
        animation-duration: 0.6s;
        animation-name: slideModal;

        h2 {
            margin-top: 40px;
            margin-bottom: 0;
        }

        p {
            margin-top: 0;
            margin-bottom: 40px;
        }
    }

    @keyframes slideModal {
        from {
            transform: translateY(100%);
        }

        to {
            transform: translateY(0%);
        }
    }

    .test.showElement:after {
        content: '';
        position: fixed;
        width: 100%;
        height: 100%;
        top: 0;
        left: 0;
        background-color: rgba(black, 0.4);
    }
}

LessonModuleComplete {
    .module-complete-container {
        display: flex;
        flex-direction: column;
        justify-content: space-around;
        align-items: center;
        height: 100%;
    }

    .body {
        text-align: center;

        h2 {
            font-size: 1.562em;
            border-bottom: none;
        }

        h3 {
            font-size: 1.125em;
        }

        p {
            font-size: 1em;
        }
    }

    button {
        width: 100%;
        margin-bottom: 1em;
    }
}
/* ... */

